# Programme

./: .gitignore  README.md  bachelorarbeit-vorlage.tex  bachelorarbeit-vorlage.toc
bachelorarbeit-vorlage/: Algorithmus.aux  Algorithmus.tex  Efficient convolutional neural network with extremely limted ressource - Kopie (2).pptx  Efficient convolutional neural network with extremely limted ressource - Kopie.pptx  Efficient convolutional neural network with extremely limted ressource.pptx  Motivation.docx  TEMKENG_bachelorarbeit.aux  TEMKENG_bachelorarbeit.lof  TEMKENG_bachelorarbeit.tex  TEMKENG_bachelorarbeit.toc  ausarbeitung.bib  bachelorarbeit-vorlage.aux  bachelorarbeit-vorlage.bbl  bachelorarbeit-vorlage.blg  bachelorarbeit-vorlage.lof  bachelorarbeit-vorlage.synctex(busy)  bachelorarbeit-vorlage.tex  bachelorarbeit-vorlage.toc  references.bib  ~$Efficient convolutional neural network with extremely limted ressource.pptx
c c++/histogramm/: .gitignore  histogramm.c  histogramm.h  readme.md
c c++/image_processing/: .gitignore  CMakeLists.txt  Makefile  histogram.cpp  histogram.h  histotogram.h  images.cpp  images.h  main.cpp  readme.md  stb_image.h  stb_image.h.gch  stb_image_resize.h  stb_image_resize.h.gch  stb_image_write.h.gch  test.c  utils.cppg  utils.h
c c++/image_processing/tmp/: Histogram.cpp  Histogram.h  Image.cpp  Image.h  utils.cpp  utils.h
c c++/images/: CMakeLists.txt  histogram.cpp  histogram.h  main.cpp  utils.cpp  utils.h
c c++/opencv/seam_carving/: CMakeLists.txt  main.cpp
python/opencv/: .gitignore  Makefile  color.py  seam.py  utils.py  (+2 more)
(+13 files in other folders)
